--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -3,7 +3,7 @@
 </div>
 
 <div class="modal fade" id="addPedidoModal" tabindex="-1" role="dialog" aria-labelledby="addPedidoModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header" style="background: #399CDF;color: white; font-weight: bold;">
         <h5 class="modal-title" id="addPedidoModalLabel">CREAR PEDIDO <i class="fas fa-1x fa-list-alt"></i></h5>
@@ -30,18 +30,7 @@
             <label>Factura</label>
             <input type="text" ng-model="pedido.no_factu" class="form-control" placeholder="no_factura">
           </div>
-          <div class="form-group">
-            <label>No_arti</label>
-            <input type="text" ng-model="pedido.no_arti" class="form-control" placeholder="no_arti">
-          </div>
-          <div class="form-group">
-            <label>Cantidad</label>
-            <input type="number" ng-model="pedido.cantidad" class="form-control" placeholder="cantidad">
-          </div>
-          <div class="form-group">
-            <label>Precio</label>
-            <input type="text" ng-model="pedido.precio" class="form-control" placeholder="precio">
-          </div>
+
           <div class="form-group">
             <label>Fecha</label>
             <input type="text" ng-model="pedido.fecha" class="form-control" placeholder="fecha">
@@ -50,6 +39,62 @@
             <label>Observacion</label>
             <input type="text" ng-model="pedido.observacion" class="form-control" placeholder="observacion">
           </div>
+          <div class="col-md-12" >
+
+              <div class="col-md-3" >
+                <div class="form-group">
+                    <label>No_arti</label>
+                    <input type="text" ng-model="articulo.no_arti" class="form-control" placeholder="no_arti">
+                  </div>
+
+              </div>
+              <div class="col-md-3" >
+                <div class="form-group">
+                    <label>Cantidad</label>
+                    <input type="number" ng-model="articulo.cantidad" class="form-control" placeholder="cantidad">
+                  </div>
+              </div>
+              <div class="col-md-3" >
+                <div class="form-group">
+                    <label>Precio</label>
+                    <input type="text" ng-model="articulo.precio" class="form-control" placeholder="precio">
+                  </div>
+              </div>
+              <div class="col-md-3">
+                <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="addArtPedido(articulo);">Guardar</button>
+              </div>
+
+              
+          </div>
+
+          <div class="form-group">
+            <table class="table">
+                <thead>
+                    <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">No_arti</th>
+                    <th scope="col">Cantidad</th>
+                    <th scope="col">Precio</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- <tr>
+                    <th scope="row">1</th>
+                    <td>Mark</td>
+                    <td>Otto</td>
+                    <td>@mdo</td>
+                    </tr> -->
+                    <tr ng-repeat="x in pedido.pedido">
+                        <th scope="row">{{ $index + 1 }}</td>
+                        <td>{{ x.no_arti }}</td>
+                        <td>{{ x.cantidad }}</td>
+                        <td>{{ x.precio }}</td>
+                      </tr>
+                </tbody>
+                </table>
+
+          </div>
+
         </form>
       </div>
       <div class="modal-footer" style="display: block;margin: 0 auto;">
