--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -42,26 +42,26 @@
           <div class="col-md-12" >
 
               <div class="col-md-3" >
-                <div class="form-group">
+                <div class="">
                     <label>No_arti</label>
                     <input type="text" ng-model="articulo.no_arti" class="form-control" placeholder="no_arti">
                   </div>
 
               </div>
               <div class="col-md-3" >
-                <div class="form-group">
+                <div class="">
                     <label>Cantidad</label>
                     <input type="number" ng-model="articulo.cantidad" class="form-control" placeholder="cantidad">
                   </div>
               </div>
               <div class="col-md-3" >
-                <div class="form-group">
+                <div class="">
                     <label>Precio</label>
                     <input type="text" ng-model="articulo.precio" class="form-control" placeholder="precio">
                   </div>
               </div>
               <div class="col-md-3">
-                <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="addArtPedido(articulo);">Guardar</button>
+                <button type="button" class="btn btn-primary" ng-click="addArtPedido(articulo);">Agregar</button>
               </div>
 
               
