--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -41,26 +41,26 @@
           </div>
           <div class="col-md-12" >
 
-              <div class="col-md-3 dol-lg-3 " >
+              <div class="col-md-3 col-lg-3 " >
                 <div class="">
                     <label>No_arti</label>
                     <input type="text" ng-model="articulo.no_arti" class="form-control" placeholder="no_arti">
                   </div>
 
               </div>
-              <div class="col-md-3 dol-lg-3" >
+              <div class="col-md-3 col-lg-3" >
                 <div class="">
                     <label>Cantidad</label>
                     <input type="number" ng-model="articulo.cantidad" class="form-control" placeholder="cantidad">
                   </div>
               </div>
-              <div class="col-md-3 dol-lg-3" >
+              <div class="col-md-3 col-lg-3" >
                 <div class="">
                     <label>Precio</label>
                     <input type="text" ng-model="articulo.precio" class="form-control" placeholder="precio">
                   </div>
               </div>
-              <div class="col-md-3 dol-lg-3">
+              <div class="col-md-3 col-lg-3">
                 <button type="button" class="btn btn-primary" ng-click="addArtPedido(articulo);">Agregar</button>
               </div>
 
