--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -61,7 +61,7 @@
                   </div>
               </div>
               <div class="col-md-3 col-lg-3">
-                <button type="button" class="btn btn-primary" ng-click="addArtPedido(articulo);">Agregar</button>
+                <button type="button" class="btn btn-primary" ng-click="addArtPedido();">Agregar</button>
               </div>
 
               
