--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -69,20 +69,20 @@
 
         <div class="container">
           <div class="row">
-            <div class="col-4">
+            <div class="col-3">
               <label>No_arti</label>
               <input type="text" ng-model="articulo.no_arti" class="form-control" placeholder="no_arti">
             </div>
-            <div class="col-4">
+            <div class="col-3">
               <label>Cantidad</label>
               <input type="number" ng-model="articulo.cantidad" class="form-control" placeholder="cantidad">
             </div>
-            <div class="col-4">
+            <div class="col-3">
               <label>Precio</label>
                 <input type="text" ng-model="articulo.precio" class="form-control" placeholder="precio">
             </div>
-            <div class="col-4">
-              <button type="button" class="btn btn-primary" ng-click="addArtPedido();">Agregar</button>
+            <div class="col-3">
+              <button type="button" class="btn btn-success" ng-click="addArtPedido();">Agregar</button>
             </div>
           </div>
         
