--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -82,6 +82,7 @@
                 <input type="text" ng-model="articulo.PRECIO" class="form-control" placeholder="precio">
             </div>
             <div class="col-3">
+              <label></label>
               <button type="button" class="btn btn-success" ng-click="addArtPedido();">Agregar</button>
             </div>
           </div>
