--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -203,7 +203,7 @@
       <br>
       <h5 class="text-center"> <strong>PEDIDOS </strong> </h5>
       <br>
-      <button class="btn btn-primary" style="float: right; font-weight: bold;margin-bottom: 1rem;" data-toggle="modal" data-target="#addPedidoModal"> <i class="fas fa-pencil"></i> CREAR PEDIDO</button>
+      <button class="btn btn-primary" style="float: right; font-weight: bold;margin-bottom: 1rem;" ng-click="initModal();" data-toggle="modal" data-target="#addPedidoModal"> <i class="fas fa-pencil"></i> CREAR PEDIDO</button>
       <table class="table table-sm table-bordered">
         <!-- <tr class="text-center" style="text-align:center;font-weight:bold">
           <td colspan="2">Deuda Cartera de Cliente</td>
