--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -33,7 +33,7 @@
 
           <div class="form-group">
             <label>Fecha</label>
-            <input type="text" ng-model="pedido.fecha" class="form-control" placeholder="fecha">
+            <input type="date" ng-model="pedido.fecha" class="form-control" placeholder="fecha">
           </div>
           <div class="form-group">
             <label>Observacion</label>
@@ -88,7 +88,7 @@
           </div>
         
         </div>
-        <div class="container">
+        <div class="" style="margin-top: 20px;">
 
           <div class="form-group">
             <table class="table">
