--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -13,6 +13,17 @@
       </div>
       <div class="modal-body">
         <form>
+
+          <div class="form-group">
+            <select class="selectpicker" data-show-subtext="true" data-live-search="true">
+              <option data-subtext="Rep California">Tom Foolery</option>
+              <option data-subtext="Sen California">Bill Gordon</option>
+              <option data-subtext="Sen Massacusetts">Elizabeth Warren</option>
+              <option data-subtext="Rep Alabama">Mario Flores</option>
+              <option data-subtext="Rep Alaska">Don Young</option>
+              <option data-subtext="Rep California" disabled="disabled">Marvin Martinez</option>
+            </select>
+          </div>
           
           <div class="form-group">
             <label>No_cia</label>
