--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -15,13 +15,13 @@
         <form>
 
           <div class="form-group">
-            <select class="my-select" data-show-subtext="true" data-live-search="true">
-              <option data-subtext="Rep California">Tom Foolery</option>
-              <option data-subtext="Sen California">Bill Gordon</option>
-              <option data-subtext="Sen Massacusetts">Elizabeth Warren</option>
-              <option data-subtext="Rep Alabama">Mario Flores</option>
-              <option data-subtext="Rep Alaska">Don Young</option>
-              <option data-subtext="Rep California" disabled="disabled">Marvin Martinez</option>
+            <label for="exampleFormControlSelect1">Example select</label>
+            <select class="form-control" id="exampleFormControlSelect1">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
             </select>
           </div>
           
