--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -14,12 +14,20 @@
       <div class="modal-body">
         <form>
 
+
+
           <div class="form-group">
-            <label for="exampleFormControlSelect1">Example select</label>
+            <label>Busqueda por Cliente</label>
+            <input type="text" ng-model="nombre_cliente" ng-keyup="getClientNew(nombre_cliente)" class="form-control" placeholder="no_cia">
+          </div>
+
+          <div class="form-group">
+            <label for="exampleFormControlSelect1">Seleccione</label>
             <select class="form-control" id="exampleFormControlSelect1">
               <option ng-repeat="x in clientes" value={{x.cod_cia}}>{{x.nombre_cliente}}</option>
             </select>
           </div>
+
           
           <div class="form-group">
             <label>No_cia</label>
