--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -18,7 +18,7 @@
 
           <div class="form-group">
             <label>Busqueda por Cliente</label>
-            <input type="text" ng-model="nombre_cliente" ng-keyup="getClientNew(nombre_cliente)" class="form-control" placeholder="no_cia">
+            <input type="text" ng-model="nombre_cliente" ng-keydown="getClientNew(true)" class="form-control" placeholder="Cliente">
           </div>
 
           <div class="form-group">
