--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -18,7 +18,7 @@
 
           <div class="form-group">
             <label>Busqueda por Cliente</label>
-            <input type="text" ng-model="nombre_cliente" ng-keydown="getClientNew(true)" class="form-control" placeholder="Cliente">
+            <input type="text" ng-model="nombre_cliente" ng-change="getClientNew(true)" class="form-control" placeholder="Cliente">
           </div>
 
           <div class="form-group">
