--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -14,12 +14,17 @@
       <div class="modal-body">
         <form>
 
+          <div class="input-group mb-3">
+            <input type="text" class="form-control" ng-model="nombre_cliente" placeholder="Busqueda por Cliente" aria-label="Busqueda por Cliente" aria-describedby="basic-addon2">
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary"  ng-click="getClientNew(true)" type="button">Button</button>
+            </div>
+          </div>
 
-
-          <div class="form-group">
+          <!-- <div class="form-group">
             <label>Busqueda por Cliente</label>
             <input type="text" ng-model="nombre_cliente" ng-change="getClientNew(true)" class="form-control" placeholder="Cliente">
-          </div>
+          </div> -->
 
           <div class="form-group">
             <label for="exampleFormControlSelect1">Seleccione</label>
