--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -36,16 +36,16 @@
           
           <div class="form-group" style="display: none;">
             <label>No_cia</label>
-            <input type="text" disabled="true" ng-model="pedido.no_cia" class="form-control" placeholder="no_cia">
+            <input type="text" ng-disabled="true" ng-model="pedido.no_cia" class="form-control" placeholder="no_cia">
           </div>
 
           <div class="form-group">
             <label>Grupo</label>
-            <input type="text"  disabled="true" ng-model="pedido.grupo" class="form-control" placeholder="Grupo">
+            <input type="text"  ng-disabled="true" ng-model="pedido.grupo" class="form-control" placeholder="Grupo">
           </div>
           <div class="form-group">
             <label>Cliente</label>
-            <input type="text" disabled="true"  ng-model="pedido.no_cliente" class="form-control" placeholder="no_cliente">
+            <input type="text" ng-disabled="true"  ng-model="pedido.no_cliente" class="form-control" placeholder="no_cliente">
           </div>
           <div class="form-group">
             <label>Factura</label>
