--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -29,7 +29,8 @@
           <div class="form-group">
             <label for="exampleFormControlSelect1">Seleccione</label>
             <select class="form-control" ng-model="client" id="exampleFormControlSelect1" ng-change="selectCLient()">
-              <option ng-repeat="x in clientes" value="{{x}}">{{x.nombre_cliente}}</option>
+              <option value="-1">Seleccione</option>
+              <option ng-repeat="x in clientes" value="{{$index}}">{{x.nombre_cliente}}</option>
             </select>
           </div>
 
