--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -29,7 +29,7 @@
           <div class="form-group">
             <label for="exampleFormControlSelect1">Seleccione</label>
             <select class="form-control" ng-model="clientIndex" id="exampleFormControlSelect1" ng-change="selectCLient()">
-              <option value="-1">Seleccione</option>
+              <option value="-1">Seleccione un cliente</option>
               <option ng-repeat="x in clientes" value="{{$index}}">{{x.nombre_cliente}}</option>
             </select>
           </div>
@@ -60,6 +60,21 @@
           <div class="form-group">
             <label>Observacion</label>
             <input type="text" ng-model="pedido.observacion" class="form-control" placeholder="observacion">
+          </div>
+
+          <div class="input-group mb-3">
+            <input type="text" class="form-control" ng-model="busqueda_prod" placeholder="Busqueda por Producto" aria-label="Busqueda por Producto" aria-describedby="basic-addon2">
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary"  ng-click="getProdNew(true)" type="button">Buscar</button>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label for="exampleFormControlSelect2">Seleccione un producto</label>
+            <select class="form-control" ng-model="clientIndex" id="exampleFormControlSelec2" ng-change="selectCLient()">
+              <option value="-1">Seleccione</option>
+              <option ng-repeat="x in clientes" value="{{$index}}">{{x.nombre_cliente}}</option>
+            </select>
           </div>
 
         <div class="container">
