--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -17,8 +17,8 @@
 
             <div class="row">
               <div class="col-sm-12 col-md-6 col-lg-6">
-                <div class="input-group mb-3">
-                  <label for="clientes">Busqueda por cliente</label>
+                <label for="clientes">Busqueda por cliente</label>
+                <div class="input-group mb-3">           
                   <input type="text" id="clientes" class="form-control" ng-model="nombre_cliente" placeholder="Busqueda por Cliente" aria-label="Busqueda por Cliente" aria-describedby="basic-addon2">
                   <div class="input-group-append">
                     <button class="btn btn-outline-secondary"  ng-click="getClientNew(true)" type="button">Buscar</button>
@@ -84,6 +84,7 @@
           
           <div class="row">
             <div class="col-sm-12 col-md-6 col-lg-6">
+              <label for="clientes">Busqueda por producto</label>
               <div class="input-group mb-3">
                 <input type="text" class="form-control" ng-model="busqueda_prod" placeholder="Busqueda por Producto" aria-label="Busqueda por Producto" aria-describedby="basic-addon2">
                 <div class="input-group-append">
