--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -60,13 +60,13 @@
             
           </div>
           <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-6">
+            <div class="col-sm-12 col-md-6 col-lg-6" style="display: none;">
               <div class="form-group">
                 <label>Factura</label>
                 <input type="text" ng-model="pedido.no_factu" class="form-control" placeholder="no_factura">
               </div>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-6">
+            <div class="col-sm-12 col-md-12 col-lg-12">
               <div class="form-group">
                 <label>Fecha</label>
                 <input type="date" ng-model="pedido.fecha" class="form-control" placeholder="fecha">
