--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -111,7 +111,7 @@
         <div class="container">
           <div class="row">
             <div class="col-2">
-              <label>COD PRODUCTO</label>
+              <label>Codigo</label>
               <input type="text" ng-disabled="true" ng-model="articulo.COD_PRODUCTO" class="form-control" placeholder="no_arti">
             </div>
             <div class="col-2">
@@ -285,7 +285,3 @@
   </div>
 </div>
 
-
-<script>
-  $('.my-select').selectpicker();
-</script>
