--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -25,7 +25,7 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm-12 col-md-6 col-lg-6" ng-if="clientes.length > 0" >
+              <div class="col-sm-12 col-md-6 col-lg-6" ng-show="clientes.length > 0" >
                 <div class="form-group">
                   <label for="exampleFormControlSelect1">Seleccione</label>
                   <select class="form-control" ng-model="clientIndex" id="exampleFormControlSelect1" ng-change="selectCLient()">
@@ -93,7 +93,7 @@
               </div>
             
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-6" ng-if="productos.length > 0">
+            <div class="col-sm-12 col-md-6 col-lg-6" ng-show="productos.length > 0">
               <div class="form-group">
                 <label for="exampleFormControlSelect2">Seleccione un producto</label>
                 <select class="form-control" ng-model="productIndex" id="exampleFormControlSelec2" ng-change="selectProduct()">
@@ -119,7 +119,7 @@
               <input type="number" min="1" max="{{articulo.existencia}}" ng-model="articulo.CANTIDAD" class="form-control" placeholder="cantidad">
             </div>
             <div class="col-2">
-              <label>Cantidad</label>
+              <label>Existencia</label>
               <input type="text"ng-disabled="true" ng-model="articulo.existencia" class="form-control" placeholder="existencia">
             </div>
             <div class="col-2">
