--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -86,9 +86,9 @@
 
 
               <div class="input-group">
-                <div class="input-group-prepend">
-                  <span class="input-group-text">Observacion</span>
-                </div>
+                
+                  <label >Observacion</label>
+                
                 <textarea class="form-control" ng-model="pedido.observacion" aria-label="With textarea"></textarea>
               </div>
             </div>
