--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -85,11 +85,9 @@
             <div class="col-sm-12 col-md-8 col-lg-8">
 
 
-              <div class="input-group">
-                
-                  <label >Observacion</label>
-                
-                <textarea class="form-control" ng-model="pedido.observacion" aria-label="With textarea"></textarea>
+              <div class="form-group">
+                <label for="comment">Observacion:</label>
+                <textarea class="form-control" ng-model="pedido.observacion" rows="5" id="comment"></textarea>
               </div>
             </div>
 
