--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -191,12 +191,12 @@
 
 
 
-    <div class="alert alert-warning alert-dismissible fade show" role="alert" style="position: relative; min-height: 200px;">
+    <!-- <div class="alert alert-warning alert-dismissible fade show" role="alert" style="position: relative; min-height: 200px;">
       <strong>Holy guacamole!</strong> You should check in on some of those fields below.
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
-    </div>
+    </div> -->
 
 
   </div>
