--- a/app/comps/common/sidebar.html
+++ b/app/comps/common/sidebar.html
@@ -27,7 +27,7 @@
           </a>
         </li>
         -->
-		<li class="nav-item" style="text-align:center;margin:0 auto;display:block;">
+		<!-- <li class="nav-item" style="text-align:center;margin:0 auto;display:block;">
           <a href="#!/usuarios" class="nav-link">
             <i class="fas fa-2x fa-user text-center" style="text-align:center"></i><br>
             Usuarios
@@ -44,19 +44,19 @@
             <i class="fas fa-2x fa-list-alt" style="text-align:center"></i><br>
             Productos
           </a>
-        </li>
+        </li> -->
         <li class="nav-item" style="text-align:center;margin:0 auto;display:block;">
           <a href="#!/pedidos" class="nav-link">
             <i class="fas fa-2x fa-list-alt" style="text-align:center"></i><br>
             Pedidos
           </a>
         </li>
-        <li class="nav-item" style="text-align:center;margin:0 auto;display:block;">
+        <!-- <li class="nav-item" style="text-align:center;margin:0 auto;display:block;">
           <a href="#!/config" class="nav-link">
             <i class="fas fa-2x fa-cog" style="text-align:center"></i><br>
             Config
           </a>
-        </li>
+        </li> -->
 
       </ul>
     </div>
