--- a/app/comps/common/sidebar.html
+++ b/app/comps/common/sidebar.html
@@ -4,6 +4,13 @@
       <ul class="nav flex-column">
         <li class="nav-item" style="text-align:center;margin:0 auto;display:block;">
           <a href="#!/home" class="nav-link">
+            
+            <i class="fas fa-2x fa-sign-out text-center" style="text-align:center"></i><br>
+            Salir <span class="sr-only">(current)
+          </a>
+        </li>
+        <li class="nav-item" style="text-align:center;margin:0 auto;display:block;">
+          <a href="#!/home" class="nav-link">
             <i class="fas fa-2x fa-home text-center" style="text-align:center"></i><br>
             Home <span class="sr-only">(current)
           </a>
