--- a/app/comps/common/sidebar.html
+++ b/app/comps/common/sidebar.html
@@ -3,9 +3,9 @@
     <div class="sidebar-sticky">
       <ul class="nav flex-column">
         <li class="nav-item" style="text-align:center;margin:0 auto;display:block;">
-          <a href="#!/home" class="nav-link">
+          <a href="/" class="nav-link">
             
-            <i class="fas fa-2x fa-sign-out text-center" style="text-align:center"></i><br>
+            <i class="fa fa-2x fa-sign-out text-center" style="text-align:center"></i><br>
             Salir <span class="sr-only">(current)
           </a>
         </li>
