--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -138,9 +138,13 @@
               <label>Precio</label>
                 <input type="text"  ng-disabled="true" ng-model="articulo.PRECIO" class="form-control" placeholder="precio">
             </div>
-            <div class="col-4">
+            <div class="col-2">
               <label></label>
               <button type="button"  class="btn btn-success" style="margin-top: 32px;" ng-click="addArtPedido();">Agregar</button>
+            </div>
+            <div class="col-2">
+              <label></label>
+              <button type="button"  class="btn btn-info" style="margin-top: 32px;" ng-click="addPedido();">Enviar pedido</button>
             </div>
           </div>
         
