--- a/app/comps/common/sidebar.html
+++ b/app/comps/common/sidebar.html
@@ -3,7 +3,7 @@
     <div class="sidebar-sticky">
       <ul class="nav flex-column">
         <li class="nav-item" style="text-align:center;margin:0 auto;display:block;">
-          <a href="/" class="nav-link">
+          <a href="/ddo" class="nav-link">
             
             <i class="fa fa-2x fa-sign-out text-center" style="text-align:center"></i><br>
             Salir <span class="sr-only">(current)
