--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -134,19 +134,19 @@
               <label>Existencia</label>
               <input type="text"ng-disabled="true" ng-model="articulo.existencia" class="form-control" placeholder="existencia">
             </div>
-            <div class="col-2">
+            <div class="col-4">
               <label>Precio</label>
                 <input type="text"  ng-disabled="true" ng-model="articulo.PRECIO" class="form-control" placeholder="precio">
             </div>
-            <div class="col-2">
+            <!-- <div class="col-2">
               <label></label>
               <button type="button"  class="btn btn-success" style="margin-top: 32px;" ng-click="addArtPedido();">Agregar</button>
-            </div>
+            </div> -->
 
           </div>
         
         </div>
-        <div class="" style="margin-top: 32px;">
+        <div class="container" style="margin-top: 32px;">
 
           <div class="form-group">
             <table class="table">
@@ -178,6 +178,11 @@
 
           </div>
 
+          <div class="col-4">
+            <label></label>
+            <button type="button"  class="btn btn-info" style="margin-top: 32px;" ng-click="addPedido();">Enviar pedido</button>
+          </div>
+
         </div>
 
 
@@ -198,10 +203,7 @@
         <span aria-hidden="true">&times;</span>
       </button>
     </div> -->
-    <div class="col-4">
-      <label></label>
-      <button type="button"  class="btn btn-info" style="margin-top: 32px;" ng-click="addPedido();">Enviar pedido</button>
-    </div>
+
 
   </div>
 
