--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -110,7 +110,7 @@
               <div class="form-group">
                 <label for="exampleFormControlSelect2">Seleccione un producto</label>
                 <select class="form-control" ng-model="productIndex" id="exampleFormControlSelec2" ng-change="selectProduct()">
-                  <option value="-1">Seleccione</option>
+                  <option value="-1" disabled selected="true" >Seleccione</option>
                   <option ng-repeat="x in productos" ng-if="!($index==1)" value="{{$index}}">{{x.nombre_producto}} - (<sub style="font-size: 6px;">{{ x.princ_activo.toLowerCase() }}</sub>) </option>
                 </select>
               </div>
@@ -167,7 +167,7 @@
                         <td> 
                           <!-- <button type="button" class="btn btn-danger" ng-click="removeArt($index);">X</button> -->
                           
-                          <i class="fa fa-trash" ng-click="removeArt($index);"></i>
+                          <i class="fa fa-trash" style="cursor: pointer;" ng-click="removeArt($index);"></i>
                           
                         </td>
                         <td>{{ x.COD_PRODUCTO }}</td>
