--- a/app/comps/common/sidebar.html
+++ b/app/comps/common/sidebar.html
@@ -58,6 +58,12 @@
             Pedidos
           </a>
         </li>
+        <li class="nav-item" style="text-align:center;margin:0 auto;display:block;">
+          <a href="#!/facturaP" class="nav-link">
+            <i class="fas fa-2x fa-list-alt" style="text-align:center"></i><br>
+            Facturas
+          </a>
+        </li>
         <!-- <li class="nav-item" style="text-align:center;margin:0 auto;display:block;">
           <a href="#!/config" class="nav-link">
             <i class="fas fa-2x fa-cog" style="text-align:center"></i><br>
