--- a/app/index.html
+++ b/app/index.html
@@ -100,6 +100,7 @@
   <script type="text/javascript" src="comps/usuarios/usuarios.js"></script>
   <script type="text/javascript" src="comps/config/config.min.js?v=1.0"></script>
   <script type="text/javascript" src="comps/pedidos/pedidos.js"></script>
+  <script type="text/javascript" src="comps/facturaP/facturaP.js"></script>
   <script type="text/javascript" src="comps/saldo/saldo.js"></script>
   <script type="text/javascript" src="comps/clientes/clientes.js"></script>
 
