--- a/app/comps/common/sidebar.html
+++ b/app/comps/common/sidebar.html
@@ -59,7 +59,7 @@
           </a>
         </li>
         <li class="nav-item" style="text-align:center;margin:0 auto;display:block;">
-          <a href="#!/facturaP" class="nav-link">
+          <a href="#!/facturado" class="nav-link">
             <i class="fas fa-2x fa-list-alt" style="text-align:center"></i><br>
             Facturas
           </a>
