--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -409,7 +409,10 @@
         <!-- <div class="col-sm-12 d-none d-sm-block">
 
         </div> -->
-        <button class="btn btn-primary" style="float: right; font-weight: bold;margin-bottom: 1rem;" ng-click="initModal();" data-toggle="modal" data-target="#showPedidoModal"> <i class="fas fa-pencil"></i> CREAR PEDIDO</button>
+        <div class="col-md-12">
+          <button class="btn btn-primary" style="float: right; font-weight: bold;margin-bottom: 1rem;" ng-click="initModal();" data-toggle="modal" data-target="#showPedidoModal"> <i class="fas fa-pencil"></i> CREAR PEDIDO</button>
+        </div>
+        
         <div class="col-md-12">
 			<!-- <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" class="table table-striped table-bordered">
       </table> -->
