cambio tabla pedido

--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -441,7 +441,7 @@
                   <!-- <button type="button" class="btn btn-danger" ng-click="removeArt($index);">X</button> -->
                   
                   <i class="fa fa-trash" style="cursor: pointer;" ng-click="removeArt(-1);"></i>
-                  <i class="fa fa-eye" style="cursor: pointer;" ng-click="getPedido(x.ID);" data-toggle="modal" data-target="#addPedidoModal" ></i>
+                  <i class="fa fa-eye" style="cursor: pointer;" ng-click="getPedido(x.ID);" data-toggle="modal" data-target="#showPedidoModal" ></i>
                 </td>
                 <td>{{ x.no_cia }}</td>
                 <td>{{ x.grupo }}</td>
