--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -283,7 +283,7 @@
   
             </div>
             
-            <div class="row" ng-show="editPedido" >
+            <div class="row" ng-show="editView" >
               <div class="col-sm-12 col-md-6 col-lg-6">
                 <label for="clientes">Busqueda por producto</label>
                 <div class="input-group mb-3">
@@ -382,8 +382,8 @@
       </div>
       <div class="modal-footer" style="display: block;margin: 0 auto;">
         <button type="button" class="btn btn-secondary" data-dismiss="modal" ng-click="reset();">Cerrar</button>
-        <button type="button"  class="btn btn-primary" ng-show="!editPedido"  ng-click="editPedido();">Editar</button>
-        <button type="button"  class="btn btn-success" ng-show="editPedido" ng-click="addPedido();">Guardar pedido</button>
+        <button type="button"  class="btn btn-primary" ng-show="!editView"  ng-click="editPedido();">Editar</button>
+        <button type="button"  class="btn btn-success" ng-show="editView" ng-click="addPedido();">Guardar pedido</button>
       </div>
     </div>
   </div>
