--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -309,8 +309,8 @@
             
             </div>
   
-          <div class="container"  ng-show="editView" >
-            <div class="row">
+          <div class="container"   >
+            <div class="row" ng-show="editView">
               <div class="col-2">
                 <label>Codigo</label>
                 <input type="text" ng-disabled="true" ng-model="articulo.COD_PRODUCTO" class="form-control" placeholder="no_arti">
