--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -350,7 +350,8 @@
           <div class="container" style="margin-top: 32px;">
             
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-              <h4 >{{formato(2,totales.bolivares)}}</h4>
+              <label>Total facura:</label>
+              <h4>{{formato(2,totales.bolivares)}}</h4>
             </div>
             
             <div class="form-group">
