--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -332,7 +332,7 @@
                 </div>
                 <div class="col-2">
                   <label>Precio</label>
-                  <span>{{formato(2,articulo.PRECIO) | 0}}</span>
+                  <span>{{formato(2,articulo.PRECIO)}}</span>
                 </div>
                 <div class="col-4">
                   <label></label>
