--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -336,7 +336,7 @@
                   <span ng-if="!editView">{{formato(2,0)}}</span>
                 </div>
                 <div class="col-3">
-                  <label>Precio total</label>
+                  <label>Precio producto total</label>
                   <span ng-if="editView">{{formato(2,(articulo.PRECIO)? (articulo.PRECIO  * articulo.CANTIDAD):0)}}</span>
                   <span ng-if="!editView">{{formato(2,0)}}</span>
                 </div>
@@ -358,6 +358,10 @@
             <div class="col-6 col-sm-6 col-md-6 col-lg-6">
               <label>Total facura:</label>
               <h4>{{formato(2,totales.bolivares)}}</h4>
+            </div>
+            <div class="col-6 col-sm-6 col-md-6 col-lg-6" ng-if="productIndex != -1">
+              <label>Total facura:</label>
+              <h4> > {{formato(2,totales.bolivares + (articulo.PRECIO  * articulo.CANTIDAD) )}}</h4>
             </div>
             
             <div class="form-group">
